# design_pattern

cpp-code/acyclic_visitor/: AcyclicVistor  CMakeCache.txt  CMakeLists.txt  Makefile  acyclic_visitor.cc  cmake_install.cmake
cpp-code/address_of/: AddressOf  CMakeCache.txt  CMakeLists.txt  Makefile  address_of.cc  cmake_install.cmake
cpp-code/algebraic_hierarchy/: AlgebraicHierarchy  CMakeCache.txt  CMakeLists.txt  Makefile  algebraic_hierarchy.cc  cmake_install.cmake
cpp-code/maybe-monad/: CMakeCache.txt  CMakeLists.txt  Makefile  Maybe  cmake_install.cmake  maybe.cc
cpp-code/template_method/: CMakeCache.txt  CMakeLists.txt  Makefile  TemplateMethod  cmake_install.cmake  template_method.cc
go-code/builder/: builder  builder.go  builder_test.go
go-code/singleton/: go.mod  singleton.go  singleton_configuration  singleton_configuration.go  singleton_test.go
